# tagclass

./: README.md  pyproject.toml
tagclass/: associate.py  common.py  parse.py  pattern.py  tag.py  tokenize.py  update.py  utils.py
tagclass/cli/: cli.py  evaluate.py
tagclass/data/: init_locator.toml  init_modifier.toml  locator_voc.toml  modifier_voc.toml
tests/: test_parse.py  test_tag.py  test_tagclass.py  test_tokenize.py
tests/data/: testapiv2  testvoc.toml
